# narsche

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
examples/: create-conceptnet-graph.py
narsche/: __init__.py
narsche.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/narsche/: __init__.py
tests/: mini-conceptnet.csv  mini-swow.csv  network-model.mod  sample-vectors.txt  test_narsche.py  vector-model.mod  vector-model.xz
utils/: create-conceptnet-graph.py
