
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narsche"
dependencies = ["networkx", "spacy", "wordfreq", "tqdm"]
version = "0.2.2"
description = "Computing schematicity of autobiographical narratives"
authors = [{ name="Isaac Kinley", email="isaac.kinley@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "--cov=pyplsc --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["narsche"]
omit = ["tests/*"]